Translate the website Changes: - Finish website translation - Add a string utils file - Improve Experience component code - Change format date function to translateDate - Add a security measure in links to external pages

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,8 @@
 {
+  "Titles": {
+    "About": "About",
+    "Experience": "Experience"
+  },
   "Home": {
     "frontend_developer": "Frontend Developer",
     "passionated_about_people": "Passionate about people"
@@ -20,20 +24,15 @@
   },
   "Experience": {
     "Perficient": {
-      "cat_description": "Build new landing pages tailored for various marketing campaigns to increase engagement and conversion rates. Develop modular templates for 20 types of banners, streamlining production for CAT's dealers. Organize and deliver web components tailored to each marketing campaign for 10 clients, ensuring consistency and effectiveness across all platforms.",
-      "dfin_description": "Engineer a new feature for the text editor product that tracks changes in the document, enhancing collaboration and version control. Maintain and test the SlateJS library, ensuring stability and performance for the text editor. Optimize the web application built with React and TypeScript to improve speed and user experience. Deliver new features using LaunchDarkly feature flags for controlled and targeted deployment."
+      "desc_0": "Build new landing pages tailored for various marketing campaigns to increase engagement and conversion rates. Develop modular templates for 20 types of banners, streamlining production for CAT's dealers. Organize and deliver web components tailored to each marketing campaign for 10 clients, ensuring consistency and effectiveness across all platforms.",
+      "desc_1": "Engineer a new feature for the text editor product that tracks changes in the document, enhancing collaboration and version control. Maintain and test the SlateJS library, ensuring stability and performance for the text editor. Optimize the web application built with React and TypeScript to improve speed and user experience. Deliver new features using LaunchDarkly feature flags for controlled and targeted deployment."
     },
     "Globant": {
-      "pvolve_description": "Optimize React components to enhance responsiveness and reduce loading times. Lead the team in planning and executing the next iterations of the product. Integrate Braze and Segment into the web app to effectively track and centralize user data and leads. Develop innovative user interfaces using Next.js. Implement and deliver new features with Optimizely feature flags for controlled deployment and testing."
+      "desc_0": "Optimize React components to enhance responsiveness and reduce loading times. Lead the team in planning and executing the next iterations of the product. Integrate Braze and Segment into the web app to effectively track and centralize user data and leads. Develop innovative user interfaces using Next.js. Implement and deliver new features with Optimizely feature flags for controlled deployment and testing."
     },
     "Truora": {
-      "truora_description": "Design and implement a scalable backend architecture using Golang and AWS. Develop a web application with Vue 2 and TypeScript. Lead the team in managing product requirements. Conduct user research to inform UX design and integrate the company's design system into the product."
-    }
-  },
-  "Dates": {
-    "present": "Present",
-    "september": "September",
-    "june": "June",
-    "july": "July"
+      "desc_0": "Design and implement a scalable backend architecture using Golang and AWS. Develop a web application with Vue 2 and TypeScript. Lead the team in managing product requirements. Conduct user research to inform UX design and integrate the company's design system into the product."
+    },
+    "present": "Present"
   }
 }
