--- a/locales/es.json
+++ b/locales/es.json
@@ -11,7 +11,7 @@
   },
   "About": {
     "about": "Sobre mí",
-    "during_my_computer_science": "Durante mi carrera en Ciencias de la computación, siempre sentí que todos mis compañeros tenían al menos una asignatura preferida, pero yo iba ya por la mitad de mi título y no podía encontrar nada que me motivara a seguir en la universidad. En 2018, mientras estudiaba para los exámenes, alguien me dió un pequeño papel donde estaban buscando un desarrollador para un nuevo proyecto, pero decidí ignorarlo.",
+    "during_my_computer_science": "Durante mi carrera en Ciencias de la Computación, siempre sentí que todos mis compañeros tenían al menos una asignatura preferida, pero yo iba ya por la mitad de mi título y no podía encontrar nada que me motivara a seguir en la universidad. En 2018, mientras estudiaba para los exámenes, alguien me dió un pequeño papel donde estaban buscando un desarrollador para un nuevo proyecto, pero decidí ignorarlo.",
     "its_probably_scam": "Probablemente sea una estafa",
     "or_something": " o algo así.",
     "when_semester_ended": "Cuando por fin terminó el semestre, llegué a mi casa y comencé a desempacar mi maleta. En ese momento, apareció otra vez el papel.",
