Create Breadcrumbs and improve navigation - Create Breadcrumbs components - Simplify folder structure - Update data from db - Fix navigation issues

--- a/locales/es.json
+++ b/locales/es.json
@@ -27,14 +27,14 @@
   },
   "Experience": {
     "Perficient": {
-      "desc_0": "Creé nuevos sitios web adaptados a varias campañas de marketing para aumentar la participación y las tasas de conversión. Desarrollé plantillas modulares en HTML y CSS para 20 tipos de banners, agilizando la producción para los distribuidores de CAT. Construí componentes web personalizados para cada campaña de marketing de 10 clientes, asegurando coherencia y efectividad en todas las plataformas.",
+      "desc_0": "Desarrollé sitios web personalizados y responsivos para diversas campañas de marketing, aumentando la participación y las tasas de conversión. Creé plantillas modulares en HTML y CSS para 20 tipos de banners, optimizando la producción para los distribuidores de CAT. Construí componentes web personalizados para campañas de 10 clientes, garantizando coherencia y efectividad en todas las plataformas digitales.",
       "desc_1": "Desarrollé una nueva característica para un editor de texto privado que rastrea los cambios en el documento, mejorando la colaboración y el control de versiones. Mantuve y creé pruebas para la biblioteca SlateJS, asegurando la estabilidad y el rendimiento del editor de texto. Optimizé la aplicación web construida con React y TypeScript para mejorar la velocidad y la experiencia del usuario. Entregué nuevas funciones utilizando las feature flags de LaunchDarkly para un despliegue controlado y dirigido."
     },
     "Globant": {
       "desc_0": "Optimicé componentes de React para mejorar la capacidad de respuesta y reducir los tiempos de carga. Lideré al equipo en la planificación y ejecución de las iteraciones del servicio de reserva de clases virtuales. Integré Braze y Segment en la aplicación web para rastrear y centralizar eficazmente los datos de usuarios y leads. Desarrollé interfaces de usuario innovadoras utilizando Next.js. Implementé y entregué nuevas funciones con las feature flags de Optimizely."
     },
     "Truora": {
-      "desc_0": "Diseñé e implementé una arquitectura de backend escalable utilizando Golang y AWS. Desarrollé una aplicación web con Vue 2 y TypeScript. Lideré un equipo de 5 en la gestión de los requisitos del producto y su implementación. Realicé investigaciones de usuarios y pruebas A/B para el diseño de experiencia de usuario. Implementé un design system único para la compañía. Fui tech lead de 5 equipos durante el desarollo de un foro web para la empresa."
+      "desc_0": "Diseñé e implementé una arquitectura de backend escalable utilizando Golang y AWS. Desarrollé una aplicación web con Vue 2 y TypeScript. Lideré un equipo de 5 en la gestión de los requisitos del producto y su implementación. Realicé investigaciones de usuarios y pruebas A/B para el diseño de experiencia de usuario. Implementé un design system único para la compañía. Fui Technical Lead de 5 equipos durante el desarollo de un foro web para la empresa."
     },
     "present": "Presente"
   }
