Add dropdown to change locale - Create dropdown component to change locale - Fix semantic HTMl structure - Fix icons color - Fix translations - Add an image in the About page

--- a/locales/en.json
+++ b/locales/en.json
@@ -7,19 +7,19 @@
     "frontend_developer": "Frontend Developer",
     "passionated_about_people": "Passionate about people",
     "bringing_tech_products": "Bringing tech products to life by telling stories is my passion! <3",
-    "made_with": "Made with "
+    "made_with": "Made with Next.js"
   },
   "About": {
-    "during_my_computer_science": "During my Computer Science career, I always felt that all my classmates had at least one favorite class, but I was already halfway through my degree and couldn&apos;t find anything that motivated me to continue at the university. In 2018, while studying for final exams, someone handed me a small piece of paper advertising a developer position for a new project, but I chose to ignore it.",
-    "its_probably_scam": "&quot;It's probably a scam",
-    "or_something": " or something.&quot;",
-    "when_semester_ended": "When the semester finally ended, I arrived home and began unpacking everything in my backpack. At that moment, that small piece of paper reappeared.",
-    "should_I_send": "Should I send them my CV? I really don't have much to lose.",
-    "what_could_happen": " What's the worst that could happen?",
+    "during_my_computer_science": "During my Computer Science career, I always felt that all my classmates had at least one favorite class, but I was already halfway through my degree and couldn't find anything that motivated me to continue at the university. In 2018, while studying for final exams, someone handed me a small piece of paper advertising a developer position for a new project, but I chose to ignore it.",
+    "its_probably_scam": "It's probably a scam",
+    "or_something": " or something.",
+    "when_semester_ended": "When the semester finally ended, while I was unpacking everything from my backpack, that paper appeared again.",
+    "should_I_send": "Should I send them my CV? ",
+    "what_could_happen": "What's the worst that could happen? ",
     "they_are_offering": "They're offering a decent salary for a student also.",
     "so_I_sent_an_email": "So I sent an email asking about the position, and thanks to that small moment of motivation,",
-    "my_life_changed": " my life changed completely",
-    "I_started_working": "That's how I started working at Truora, a startup that didn't even have a name at that time, but three years later, in 2021, it would be present in Colombia, Mexico, Chile, Brazil, and Panama. I learned what it's like to be part of the beginning of a startup, to build a project from scratch, to raise capital, to lead teams, to understand the product, its requirements, and how to grow exponentially. But most importantly, I learned that the motivation I had been seeking years before was found in those",
+    "my_life_changed": " my life changed completely. ",
+    "I_started_working": "That's how I started working at Truora, a background check startup, that didn't even have a name at that time. But three years later, in 2021, it would be present in Colombia, Mexico, Chile, Brazil, and Panama. I learned what it's like to be part of the beginning of a startup, to build a project from scratch, to raise capital, to lead teams, to understand the product, its requirements, and how to grow exponentially. But most importantly, I learned that the motivation I had been seeking years before was found in those ",
     "projects_aims_to": "projects that aim to improve our day-to-day lives",
     "one_step": ", one step at a time.",
     "I_enjoy": "I enjoy designing, developing, cooking, photographing and gaming."
