--- a/locales/es.json
+++ b/locales/es.json
@@ -7,21 +7,21 @@
     "frontend_developer": "Desarrollador Front-end",
     "passionated_about_people": "Apasionado por las personas",
     "bringing_tech_products": "Traer productos a la vida contando historias es mi pasión <3",
-    "made_with": "Hecho con "
+    "made_with": "Hecho con Next.js"
   },
   "About": {
     "about": "Sobre mí",
     "during_my_computer_science": "Durante mi carrera en Ciencias de la Computación, siempre sentí que todos mis compañeros tenían al menos una asignatura preferida, pero yo iba ya por la mitad de mi título y no podía encontrar nada que me motivara a seguir en la universidad. En 2018, mientras estudiaba para los exámenes, alguien me dió un pequeño papel donde estaban buscando un desarrollador para un nuevo proyecto, pero decidí ignorarlo.",
     "its_probably_scam": "Probablemente sea una estafa",
     "or_something": " o algo así.",
-    "when_semester_ended": "Cuando por fin terminó el semestre, llegué a mi casa y comencé a desempacar mi maleta. En ese momento, apareció otra vez el papel.",
-    "should_I_send": "¿Debería de enviar mi CV? Realmente no tengo mucho que perder.",
+    "when_semester_ended": "Cuando por fin terminó el semestre, mientras desempacaba las cosas de mi maleta, apareció otra vez el papel.",
+    "should_I_send": "¿Debería de enviar mi CV?",
     "what_could_happen": " ¿Qué es lo peor que puede pasar?",
     "they_are_offering": " Además, ofrecen un buen salario para ser estudiante.",
-    "so_I_sent_an_email": "Así que decidí enviarles un correo preguntando por la vacante, y gracias a ese pequeño momento de motivación",
-    "my_life_changed": " mi vida cambió completamente.",
-    "I_started_working": "Así fue como comencé a trabajar en Truora, una startup que ni siquiera tenía nombre en ese momento, pero que tres años después, en 2021, estaría presente en Colombia, México, Chile, Brasil y Panamá. Aprendí lo que es ser parte de una startup desde el comienzo, a construir proyectos desde cero, a levantar capital, liderar equipos, entender los requerimientos del producto, y cómo crecer de una forma exponencial. Pero aún más importante, descubrí que esa motivación que estuve buscando durante estos años, la encontré en esos",
-    "projects_aims_to": " proyectos que buscan mejorar nuestro día a día",
+    "so_I_sent_an_email": "Así que decidí enviarles un correo preguntando por la vacante, y gracias a ese pequeño momento de motivación, ",
+    "my_life_changed": "mi vida cambió completamente.",
+    "I_started_working": " Así fue como comencé a trabajar en Truora, una startup de validación de antecedentes que ni siquiera tenía nombre en ese momento. Pero tres años después, en 2021, estaría presente en Colombia, México, Chile, Brasil y Panamá. Ahí aprendí lo que es ser parte de una startup desde el inicio, a construir proyectos desde cero, a levantar capital, liderar equipos, entender los requerimientos del producto, y cómo crecer de una forma exponencial. Pero lo más importante, fue que descubrí que esa motivación que estuve buscando durante estos años, la encontré en esos ",
+    "projects_aims_to": "proyectos que buscan mejorar un poco nuestro día a día",
     "one_step": ", un paso a la vez.",
     "I_enjoy": "Disfruto mucho diseñar, desarrollar, cocinar, tomar fotos y jugar videojuegos."
   },
